2008-06-19	Jannis Pohlmann <jannis@xfce.org>

	* Huge code reorganization: Split the mixer into three parts: 
	  libxfce4mixer, xfce4-mixer and the panel plugin. libxfce4mixer
	  contains everything that's needed by both, the mixer and the 
	  plugin.
	* panel-plugin/: This will become a minimalistic, keyboard and 
	  scroll-wheel orientated plugin with no volume popup slider or
	  whatsoever. I'll have to add this later. Still missing: config
	  dialog and the connection to the soundcard.
	* xfce4-mixer/: I don't think I've changed anything in here, just
	  reorganized the code.

2008-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Add support for version information, just like all
	  the other Xfce components have. Also add special debugging support
	  for SVN snapshots. Enhance the AC_COPYRIGHT value. Print build
	  configuration at the end of ./configure.

2008-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, xfce4-mixer/xfce-mixer-card.{c,h},
	  xfce4-mixer/xfce-mixer.c: Add optional support for the GstMixer
	  notification API. It uses GstBus and GstMixerMessages. The latter
	  are only available with GStreamer >= 0.10.14. Not all work is done
	  yet, but it will be worked on this week.
	* autogen.sh: Tweak autogen.sh so that it works with both, SVN and
	  git-svn. 

2008-01-13	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer-card.{c,h}: Add XfceMixerCard class as a wrapper for
	  GstMixer. Implement a method (xfce_mixer_card_get_name()) to
	  work-around problems with sound card names containing characters
	  not allowed as section names (see Desktop Entry specification). 
	  This method is now used to store/load preferences of soundcards.
	* xfce4-mixer/xfce-mixer.{c,h}, 
	  xfce4-mixer/xfce-mixer-controls-dialog.{c,h}, 
	  xfce4-mixer/xfce-mixer-option.{c,h},
	  xfce4-mixer/xfce-mixer-switch.{c,h},
	  xfce4-mixer/xfce-mixer-track.{c,h}
	  xfce4-mixer/xfce-mixer-window.{c,h}: Use XfceMixerCard instead of